--- a/site/index.html
+++ b/site/index.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8" />
   <title>진학 데이터 검색</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400..800&family=Noto+Sans+KR:wght@300..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <!-- 로그인 오버레이 (기존 기능 유지) -->
+  <!-- 로그인 -->
   <div id="auth" class="auth">
     <div class="auth-card">
       <div class="brand">
@@ -20,15 +19,12 @@
           <div class="brand-sub">강원에서 시작하는 대학의 길</div>
         </div>
       </div>
-
       <h2>접속하기</h2>
       <p class="muted">교사용 계정으로 로그인하세요.</p>
-
       <label>아이디</label>
       <input id="loginUser" class="input" placeholder="teacher" autocomplete="username" />
       <label>비밀번호</label>
       <input id="loginPass" class="input" type="password" placeholder="••••••••" autocomplete="current-password" />
-
       <button id="loginBtn" class="btn primary">로그인</button>
       <p id="loginMsg" class="error" style="display:none;">아이디 또는 비밀번호가 올바르지 않습니다.</p>
     </div>
@@ -43,47 +39,36 @@
         <div class="brand-sub">진학 데이터 검색</div>
       </div>
     </div>
-
     <div class="actions">
       <button id="toggleTheme" class="btn ghost" title="테마 전환">🌓</button>
       <button id="logoutBtn" class="btn ghost">로그아웃</button>
     </div>
   </header>
 
-  <!-- 히어로 배너 -->
-  <section class="hero">
-    <div class="hero-inner wrap">
-      <div class="hero-copy">
-        <h1>강원에서 시작하는<br><span>진학 데이터 검색</span></h1>
-        <p class="hero-sub">PDF · PPTX · XLSX · HWPX까지, 필요한 정보만 정확하게.</p>
-
-        <div class="searchbar hero-search">
-          <input id="q" class="search" type="search"
-                 placeholder="예) 수시 강원대 분석 / 교과 전형 / 지역인재" autofocus />
-        </div>
-      </div>
-
-      <!-- 배너 이미지가 있으면 사용 (site/banner.png) -->
-      <div class="hero-art">
-        <img src="./banner.png" alt="" onerror="this.style.display='none';this.parentElement.classList.add('fallback')" />
-        <svg class="fallback-art" viewBox="0 0 320 180" preserveAspectRatio="xMidYMid meet" aria-hidden="true">
-          <defs>
-            <linearGradient id="g" x1="0" x2="1">
-              <stop offset="0" stop-color="#dbeafe"/>
-              <stop offset="1" stop-color="#e9d5ff"/>
-            </linearGradient>
-          </defs>
-          <rect width="320" height="180" rx="16" fill="url(#g)"/>
-          <path d="M24 120 Q 90 70 130 98 T 220 72 T 300 40" fill="none" stroke="#0b57d0" stroke-width="6" stroke-linecap="round"/>
-          <circle cx="300" cy="40" r="6" fill="#0b57d0"/>
-        </svg>
+  <!-- 센터 히어로(이미지 없음) -->
+  <section class="hero center">
+    <div class="wrap hero-copy center">
+      <h1>강원에서 시작하는<br><span>진학 데이터 검색</span></h1>
+      <p class="hero-sub">PDF · PPTX · XLSX · HWPX까지, 필요한 정보만 정확하게.</p>
+      <div class="searchbar hero-search">
+        <input id="q" class="search" type="search"
+               placeholder="예) 수시 강원대 분석 / 교과 전형 / 지역인재" autofocus />
       </div>
     </div>
   </section>
 
-  <!-- 결과 영역 -->
+  <!-- 결과 2단 그리드 -->
   <main class="wrap">
-    <ul id="results" class="results"></ul>
+    <div class="results-grid">
+      <section class="col">
+        <div class="col-head">엑셀 결과</div>
+        <ul id="results-xlsx" class="results"></ul>
+      </section>
+      <section class="col">
+        <div class="col-head">기타 파일 결과</div>
+        <ul id="results-etc" class="results"></ul>
+      </section>
+    </div>
   </main>
 
   <footer class="wrap foot">
