--- a/site/index.html
+++ b/site/index.html
@@ -45,7 +45,7 @@
     </div>
   </header>
 
-  <!-- 센터 히어로(이미지 없음) -->
+  <!-- 히어로 -->
   <section class="hero center">
     <div class="wrap hero-copy center">
       <h1>강원에서 시작하는<br><span>진학 데이터 검색</span></h1>
@@ -57,18 +57,38 @@
     </div>
   </section>
 
-  <!-- 결과 2단 그리드 -->
-  <main class="wrap">
-    <div class="results-grid">
-      <section class="col">
-        <div class="col-head">엑셀 결과</div>
-        <ul id="results-xlsx" class="results"></ul>
-      </section>
-      <section class="col">
-        <div class="col-head">기타 파일 결과</div>
-        <ul id="results-etc" class="results"></ul>
-      </section>
+  <!-- 필터 바 -->
+  <section class="wrap toolbar">
+    <div class="chips" id="typeChips">
+      <!-- 동적 생성: All / PDF / XLSX / PPTX / HWPX / TXT (+ 각 타입별 개수) -->
     </div>
+
+    <div class="filter-row">
+      <div class="filter-group" id="xlsxGroup" style="display:none;">
+        <label>엑셀 시트</label>
+        <select id="sheetSelect">
+          <option value="">전체</option>
+        </select>
+      </div>
+
+      <div class="filter-group" id="pdfGroup" style="display:none;">
+        <label>PDF 페이지</label>
+        <div class="range">
+          <input id="pdfMin" type="number" min="1" placeholder="최소" />
+          <span>~</span>
+          <input id="pdfMax" type="number" min="1" placeholder="최대" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- 결과(혼합 정렬, 단일 리스트) -->
+  <main class="wrap">
+    <div class="result-head">
+      <div>검색 결과 <span id="totalBadge" class="badge">0</span></div>
+      <div class="muted small" id="countsText"></div>
+    </div>
+    <ul id="results" class="results"></ul>
   </main>
 
   <footer class="wrap foot">
