--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <!-- 로그인 오버레이 -->
+  <!-- 로그인 -->
   <div id="auth" class="auth">
     <div class="auth-card">
       <div class="brand">
@@ -21,13 +21,11 @@
         </div>
       </div>
       <h2>접속하기</h2>
-      <p class="muted">교사용 계정으로 로그인하세요. (ID/PW: <b>teacher</b>)</p>
-
+      <p class="muted">교사용 계정 (ID/PW: <b>teacher</b>)</p>
       <label>아이디</label>
       <input id="loginUser" class="input" placeholder="teacher" autocomplete="username" />
       <label>비밀번호</label>
       <input id="loginPass" class="input" type="password" placeholder="••••••••" autocomplete="current-password" />
-
       <button id="loginBtn" class="btn primary">로그인</button>
       <p id="loginMsg" class="error" style="display:none;">아이디 또는 비밀번호가 올바르지 않습니다.</p>
     </div>
@@ -48,18 +46,15 @@
     </div>
   </header>
 
-  <!-- 히어로(이미지 없이 중앙 정렬) -->
+  <!-- 히어로 -->
   <section class="hero center">
     <div class="wrap hero-copy center">
       <h1>강원에서 시작하는<br><span>진학 데이터 검색</span></h1>
       <p class="hero-sub">PDF · PPTX · XLSX · HWPX까지, 필요한 정보만 정확하게.</p>
-
       <div class="searchbar hero-search">
         <input id="q" class="search" type="search"
                placeholder="예) 수시 강원대 분석 / 교과 전형 / 지역인재" autofocus />
       </div>
-
-      <!-- 검색 모드 -->
       <div class="mode-chips" role="group" aria-label="검색 모드">
         <button id="modeTitle" class="chip active">제목만</button>
         <button id="modeAll" class="chip">제목+본문</button>
@@ -69,16 +64,12 @@
 
   <!-- 필터 바 -->
   <section class="wrap toolbar">
-    <div class="chips" id="typeChips">
-      <!-- All / PDF / XLSX / PPTX / HWPX / TXT  (동적 생성) -->
-    </div>
+    <div class="chips" id="typeChips"><!-- ALL / PDF / XLSX / PPTX / HWPX / TXT --></div>
 
     <div class="filter-row">
       <div class="filter-group" id="xlsxGroup" style="display:none;">
         <label>엑셀 시트</label>
-        <select id="sheetSelect">
-          <option value="">전체</option>
-        </select>
+        <select id="sheetSelect"><option value="">전체</option></select>
       </div>
 
       <div class="filter-group" id="pdfGroup" style="display:none;">
@@ -92,7 +83,7 @@
     </div>
   </section>
 
-  <!-- 결과(타입 섞어서 정렬) -->
+  <!-- 결과 -->
   <main class="wrap">
     <div class="result-head">
       <div>검색 결과 <span id="totalBadge" class="badge">0</span></div>
