--- a/site/index.html
+++ b/site/index.html
@@ -62,8 +62,8 @@
 
       <!-- 검색 모드 -->
       <div class="mode-chips" role="group" aria-label="검색 모드">
-        <button id="modeTitle" class="chip active">제목만</button>
-        <button id="modeAll" class="chip">제목+본문</button>
+        <button id="modeFiles" class="chip active">파일만</button>
+        <button id="modeAll" class="chip">파일+본문</button>
       </div>
     </div>
   </section>
