--- a/site/index.html
+++ b/site/index.html
@@ -62,7 +62,7 @@
 
       <!-- 검색 모드 -->
       <div class="mode-chips" role="group" aria-label="검색 모드">
-        <button id="modeFiles" class="chip active">파일만</button>
+        <button id="modeFiles" class="chip active">파일제목</button>
         <button id="modeAll" class="chip">파일+본문</button>
       </div>
     </div>
