--- a/site/index.html
+++ b/site/index.html
@@ -22,83 +22,90 @@
       </div>
       <h2>접속하기</h2>
       <p class="muted">교사용 계정으로 로그인하세요. (ID/PW: <b>teacher</b>)</p>
-
       <label>아이디</label>
       <input id="loginUser" class="input" placeholder="teacher" autocomplete="username" />
       <label>비밀번호</label>
       <input id="loginPass" class="input" type="password" placeholder="••••••••" autocomplete="current-password" />
-
       <button id="loginBtn" class="btn primary">로그인</button>
       <p id="loginMsg" class="error" style="display:none;">아이디 또는 비밀번호가 올바르지 않습니다.</p>
     </div>
   </div>
 
-  <!-- 헤더 -->
-  <header class="wrap head">
-    <div class="brand">
-      <img src="./logo.svg" alt="" class="logo-img" />
-      <div>
-        <div class="brand-title">강원오름</div>
-        <div class="brand-sub">진학 데이터 검색</div>
+  <!-- 고정 상단바 -->
+  <header class="topbar">
+    <div class="topbar-inner">
+      <div class="brand mini">
+        <img src="./logo.svg" alt="" class="logo-img" />
+        <div>
+          <div class="brand-title">강원오름</div>
+          <div class="brand-sub">진학 데이터</div>
+        </div>
+      </div>
+
+      <div class="searchbox">
+        <input id="q" class="search input-lg" type="search" placeholder="예) 수시 강원대 분석 / 교과 전형 / 지역인재" autocomplete="off" />
+        <button id="searchBtn" class="btn primary">검색</button>
+        <div id="autocomplete" class="ac-list" style="display:none;"></div>
+      </div>
+
+      <div class="actions">
+        <a href="./board.html" class="btn ghost">💬 상담</a>
+        <button id="toggleTheme" class="btn ghost" title="테마 전환">🌓</button>
+        <button id="logoutBtn" class="btn ghost">로그아웃</button>
       </div>
     </div>
-    <div class="actions">
-      <a href="./board.html" class="btn primary" title="온라인 상담 게시판">💬 온라인 상담</a>
-      <button id="toggleTheme" class="btn ghost" title="테마 전환">🌓</button>
-      <button id="logoutBtn" class="btn ghost">로그아웃</button>
-    </div>
-  </header>
 
-  <!-- 히어로(이미지 없이 중앙 정렬) -->
-  <section class="hero center">
-    <div class="wrap hero-copy center">
-      <h1>강원에서 시작하는<br><span>진학 데이터 검색</span></h1>
-      <p class="hero-sub">PDF · PPTX · XLSX · HWPX까지, 필요한 정보만 정확하게.</p>
+    <div class="tabs-wrap">
+      <div id="tabs" class="tabs">
+        <!-- 통합/문서 탭 -->
+        <button data-tab="all"  class="tab active">통합</button>
+        <button data-tab="pdf"  class="tab">PDF</button>
+        <button data-tab="xlsx" class="tab">XLSX</button>
+        <button data-tab="pptx" class="tab">PPTX</button>
+        <button data-tab="hwpx" class="tab">HWPX</button>
+        <button data-tab="txt"  class="tab">TXT</button>
 
-      <div class="searchbar hero-search">
-        <input id="q" class="search" type="search"
-               placeholder="예) 수시 강원대 분석 / 교과 전형 / 지역인재" autofocus />
-      </div>
-
-      <!-- 검색 모드 -->
-      <div class="mode-chips" role="group" aria-label="검색 모드">
-        <button id="modeFiles" class="chip active">파일제목</button>
-        <button id="modeAll" class="chip">파일+본문</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- 필터 바 -->
-  <section class="wrap toolbar">
-    <div class="chips" id="typeChips"><!-- 동적 생성 --></div>
-
-    <div class="filter-row">
-      <div class="filter-group" id="xlsxGroup" style="display:none;">
-        <label>엑셀 시트</label>
-        <select id="sheetSelect"><option value="">전체</option></select>
-      </div>
-
-      <div class="filter-group" id="pdfGroup" style="display:none;">
-        <label>PDF 페이지</label>
-        <div class="range">
-          <input id="pdfMin" type="number" min="1" placeholder="최소" />
-          <span>~</span>
-          <input id="pdfMax" type="number" min="1" placeholder="최대" />
+        <div class="tab-right">
+          <div class="mode-chips">
+            <button id="modeFiles" class="chip active" title="파일제목으로만 찾기">파일제목</button>
+            <button id="modeAll"   class="chip" title="파일제목 + 본문">파일+본문</button>
+          </div>
+          <div class="sort-chips">
+            <button data-sort="score" class="chip active">정확도</button>
+            <button data-sort="recent" class="chip">최신</button>
+          </div>
         </div>
       </div>
     </div>
-  </section>
+  </header>
 
-  <!-- 결과 -->
-  <main class="wrap">
-    <div class="result-head">
-      <div>검색 결과 <span id="totalBadge" class="badge">0</span></div>
-      <div class="muted small" id="countsText"></div>
-    </div>
-    <ul id="results" class="results"></ul>
+  <!-- 본문: 좌 결과 / 우 미리보기 -->
+  <main class="container">
+    <section class="left">
+      <div class="result-head">
+        <div>검색 결과 <span id="totalBadge" class="badge">0</span></div>
+        <div class="muted small" id="countsText"></div>
+      </div>
+
+      <ul id="results" class="results"></ul>
+
+      <div class="more-wrap">
+        <button id="moreBtn" class="btn">더 보기</button>
+      </div>
+    </section>
+
+    <aside class="right">
+      <div class="preview-head">
+        <div class="ph-title">빠른 미리보기</div>
+        <div class="muted small" id="pvMeta"></div>
+      </div>
+      <div id="preview" class="preview card">
+        <div class="muted">결과 위에 마우스를 올리거나 선택(→)하면 이곳에 미리보기가 표시됩니다.</div>
+      </div>
+    </aside>
   </main>
 
-  <footer class="wrap foot">
+  <footer class="foot wrap">
     <small>© 강원오름 • GitHub Pages</small>
   </footer>
 
